centered inputfield of restaurants index

--- a/app/assets/stylesheets/components/_restaurant-index.scss
+++ b/app/assets/stylesheets/components/_restaurant-index.scss
@@ -79,3 +79,32 @@
     padding-top: 3px;
   }
 }
+
+
+.new-alignment-resto-index {
+  display: flex;
+  margin: auto;
+}
+
+
+#dan_input {
+  border-style: hidden;
+  color: #FDFBFD;
+  background-color: #468f46;
+  outline: none;
+  font-family: 'Red Hat Display', sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 40px;
+  line-height: 30px;
+
+
+}
+.hate-that-input-field {
+  text-align: right;
+  width: 100%;
+
+}
+.edward {
+  margin-left: 25px;
+}
