--- a/app/views/restaurants/_restaurant_modal.html.erb
+++ b/app/views/restaurants/_restaurant_modal.html.erb
@@ -72,7 +72,9 @@
                           <% when 'Munich' %>
                             612 Km
                           <% when 'Paris' %>
-                            1,074 Km
+                            1,074 
+                          <% else %>
+                            n/a Km
                           <% end %>
                         </div>
                     </div>
