updated ratings so it is not so extreme

--- a/app/views/restaurants/_restaurant_card.html.erb
+++ b/app/views/restaurants/_restaurant_card.html.erb
@@ -31,7 +31,7 @@
 
       <div class="restaurant-rating">
         <p>RATING</p>
-        <%= rand(1..4) %>.<%= rand(1..9)%>
+        4.<%= rand(1..9)%>
       </div>
 
 
