--- a/app/views/restaurants/_restaurant_modal.html.erb
+++ b/app/views/restaurants/_restaurant_modal.html.erb
@@ -43,7 +43,7 @@
 
                    <div class="col">
                       <div class="restaurant-dashboard-title">RATING</div>
-                      <div class="restaurant-dashboard-content"><%= rand(2..4) %>.<%= rand(1..9) %></div>
+                      <div class="restaurant-dashboard-content">4.<%= rand(1..9) %></div>
                     </div>
 
                     <div class="col">
@@ -74,7 +74,7 @@
                           <% when 'Munich' %>
                             612 Km
                           <% when 'Paris' %>
-                            1,074 
+                            1,074
                           <% else %>
                             n/a Km
                           <% end %>
