2km if no address

--- a/app/views/restaurants/_restaurant_card.html.erb
+++ b/app/views/restaurants/_restaurant_card.html.erb
@@ -31,7 +31,7 @@
 
       <div class="restaurant-rating">
         <p>RATING</p>
-        4.<%= rand(1..9)%>
+        <%= rand(1..4) %>.<%= rand(1..9)%>
       </div>
 
 
@@ -49,7 +49,7 @@
           <% when 'Paris' %>
             1,074 Km
           <% else %>
-            n/a Km
+            2 Km
         <% end %>
       </div>
     </div>
