for the sake of being

--- a/app/assets/stylesheets/components/_restaurant-index.scss
+++ b/app/assets/stylesheets/components/_restaurant-index.scss
@@ -85,7 +85,7 @@
   display: flex;
   margin: auto;
 }
-
+// -------------------------------------
 
 #dan_input {
   border-style: hidden;
@@ -107,4 +107,12 @@
 }
 .edward {
   margin-left: 25px;
+}
+
+.sebis {
+  width: 100%;
+}
+
+#tonys {
+margin-right: -70px;
 }
