--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -5,20 +5,24 @@
   margin-top: -5px;
 }
 .dishlist-card {
+  display: flex;
   width: 480px;
   height: 176px;
   border-radius: 10px;
-  padding-top: 7px;
+  padding: 12px;
   background-color: $cards-background;
   opacity: 0.9;
   box-shadow: $shadow;
+  border: 1px solid rgba(0, 0, 0, 0.125);
 }
 .dishlist-picture {
   width: 153px;
-  height: 153px;
+  height: 100%;
   border-radius: 10px;
   object-fit: cover;
-  padding-top: 9px;
+}
+.dishlist-left {
+  flex-shrink: 0;
 }
 
 .dishlist-right {
@@ -30,7 +34,6 @@
   font-weight: 500;
   font-size: 1.5em;
   color: $text-color;
-  padding-top: 3px;
 }
 .dishlist-tags {
   font-family: 'Red Hat Display', sans-serif;
