--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,8 +1,8 @@
 <div>
-  <div class="banner-container restaurants-banner">
+  <div class="banner-container">
     <!-- RESTAURANT -->
       <!--  HEADLINE with the two text inputs -->
-      <div class="new-alignment-resto-index justify-content-center">
+      <div class="d-flex container banner-head">
 
         <div class="hate-that-input-field">
           <input type="text" autocomplete="off" class="banner-dish sebis" id="tonys" value="<%= params[:dish].present? ? "#{params[:dish]}" : 'Dish' %>">
