you can now add a new dish, and upload dish images, slightly changed design as well

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -16,8 +16,8 @@
   border: 1px solid rgba(0, 0, 0, 0.125);
 }
 .dishlist-picture {
-  width: 170px;
-  height: 100%;
+  width: 185px;
+  height: 150px;
   border-radius: 10px;
   object-fit: cover;
 }
